deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: memories
  template:
    metadata:
      labels:
        app: memories
    spec:
      imagePullSecrets:
        - name: docker-secret
      containers:
        - name: mern-test
          image: diagonalge/mern-test:latest
          ports:
            - containerPort: 3000
