service-todo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-test-service-2
spec:
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 3000
  type: ClusterIP
