service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-test-service
spec:
  selector:
    app: memories
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
