ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /app1
          pathType: Prefix
          backend:
            service:
              name: mern-test-service
              port:
                number: 3000
        - path: /app2
          pathType: Prefix
          backend:
            service:
              name: mern-test-service-2
              port:
                number: 5000
